<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" > 
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/comm_setting_ip_port" >
    </TextView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/comm_setting_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"

            android:hint="@string/comm_setting_hint_ip"
         >
        </EditText>
        <EditText
            android:id="@+id/comm_setting_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:inputType="number"
            android:hint="@string/comm_setting_hint_port"
            >
        </EditText>
    </LinearLayout>

    <EditText
        android:id="@+id/comm_setting_location_engine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/comm_setting_hint_location_engine"
        />


    <EditText
        android:id="@+id/comm_setting_server_engine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/comm_setting_hint_server_engine"
        >

    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/comm_setting_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/comm_setting_button_save" >

        </Button>

        <Button
            android:id="@+id/comm_setting_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/comm_setting_button_cancel" >
        </Button>
    </LinearLayout>


</LinearLayout>