<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- android:background="@drawable/sns_login_bg" -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="1" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/team_name"
                android:textColor="#00ff00"
                android:textSize="24dp" >
            </TextView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/platform_name"
                android:textColor="#00ff00"
                android:textSize="24dp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>
<!--
    <TextView
        android:id="@+id/title1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Theme"
        android:textColor="@color/red"
        android:textSize="24dp" >
    </TextView>
-->
    <EditText
        android:id="@+id/register_username_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:singleLine="true" >
    </EditText>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:singleLine="true" >
    </EditText>

    <EditText
        android:id="@+id/register_password1_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:singleLine="true" >
    </EditText>

    <EditText
        android:id="@+id/register_password2_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_next"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/register_setting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/comm_setting" >
        </Button>
        <Button
            android:id="@+id/register_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/finish" >
        </Button>

        <Button
            android:id="@+id/register_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/back" >
        </Button>
    </LinearLayout>

</LinearLayout>