<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" > 
        <!--android:background="@drawable/sns_login_bg" -->
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/team_name"
                android:textColor="#00ff00"
                android:textSize="24dp" >
            </TextView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/platform_name"
                android:textColor="#00ff00"
                android:textSize="24dp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>
<!--
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Theme"
        android:textColor="@color/red"
        android:textSize="24dp" >
    </TextView>
-->
    <EditText
        android:id="@+id/login_username_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/username" >
    </EditText>

    <EditText
        android:id="@+id/login_password_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword" >
    </EditText>

    <CheckBox
        android:id="@+id/login_savepassword_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </CheckBox>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/login_setting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/comm_setting" >
        </Button>
        <Button
            android:id="@+id/login_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/login" >
        </Button>

        <Button
            android:id="@+id/login_exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/exit" >
        </Button>
        
    </LinearLayout>

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registe_soon" >
    </Button>

</LinearLayout>